--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,15 @@ keywords = ["fortuna", "fugle", "intelligence", "realtime", "taiwan"]
 authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-pandas = "^0.24.2"
-requests = "^2.22"
+python = ">=3.7.1,<4"
+pandas = "^1.2.1"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.0"
-pre-commit = "^1.16"
-black = {version = "^18.3-alpha.0",allows-prereleases = true}
+pytest = "^3.10.1"
+pre-commit = "^1.21.0"
+black = "18.9b0"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
